# MechantMechant

./: .gitignore  README.md
mechantmechant/: Cargo.toml  README.md
mechantmechant/src/: main.rs
mechantmechant/utils/: installation.ps1
web-socket/: client.py  serveur.py  serveur2.py
