        [package]
        name = "mechantmechant"
        version = "0.1.0"
        edition = "2021"

        [dependencies]
        clipboard = "0.5.0"
        reqwest = { version = "0.11", features = ["blocking", "json"] }
        tokio = { version = "1", features = ["full"] }
        clipboard-win = "4.0"
        tokio-tungstenite = "0.16"
        url = "2"
        futures-util = "0.3.31" # pour `StreamExt`
        chrono = "0.4.38"
        xcap = "0.0.14"

